# portfolio

portfolio/: pyproject.toml  requirements.txt
portfolio/config/: models.py
portfolio/contact/: models.py  views.py
portfolio/contact/migrations/: 0001_initial.py
portfolio/contact/templates/contact/: contact.html
portfolio/core/: urls.py  views.py
portfolio/core/templates/: 404.html  500.html
portfolio/portfolio/: settings.py  urls.py
portfolio/projects/: models.py  urls.py  views.py
portfolio/projects/migrations/: 0001_initial.py
portfolio/projects/templates/projects/: project_detail.html  project_list.html
portfolio/templates/: base.html
